--- a/docs/wallets/ledger.mdx
+++ b/docs/wallets/ledger.mdx
@@ -11,11 +11,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 The Helium blockchain has support for Ledger hardware wallets. When installed on a Nano S or Nano X,
 the Helium ledger app allows you to:
 
-- view your Helium address(es) and balances
-- issue a payment to one address
-- submit validator transactions, including stake, transfer, and unstake
+- View your Helium address(es) and balances
+- Issue payment to one address
+- Submit Validator transactions, including stake, transfer, and unstake
 
-This guide will walk through using Helium on a Ledger Nano S but is similar to setup on the Nano X.
+> This guide will walk through using Helium on a Ledger Nano S and is similar to the setup on a
+> Ledger Nano X.
 
 :::info
 
@@ -26,15 +27,17 @@ addition to a CLI is ongoing.
 
 ## Installing the Helium ledger application
 
-- Go to Ledger Live &gt; Settings &gt; Experimental Features &gt; Enable Developer mode.
+- Go to `Settings` &gt; `Experimental features` and toggle `Developer mode` to **On**
 
 <img src={useBaseUrl('img/wallets/ledger/ledger-dev-mode.png')} />
 
-- Once enabled, go to Manager and search "Helium".
+- Once enabled, go to `Manager` and search "Helium".
 
 :::info
 
-If you can't find "Helium", you may need to update your Ledger Live.
+If you can not find "Helium", you may need to update your Ledger Live.
+
+Check your version of Ledger Live by going to `Settings` &gt; `About` &gt; `Version`.
 
 :::
 
@@ -56,21 +59,20 @@ blocking the USB device.
 
 :::
 
-To interact with the app on Ledger, you will need to use the CLI. Head to
-[Releases in the Github repo](https://github.com/helium/helium-ledger-cli/releases) and download the
-most recent release for your operating system.
+To interact with the app on Ledger, you will need to use the Helium Ledger CLI (CLI, for short).
+Head to [Releases in the Github repo](https://github.com/helium/helium-ledger-cli/releases) and
+download the most recent release for your operating system.
 
-We'll use macOS for the remainder of this example.
+> We'll use macOS for the remainder of this example.
 
-- Download the release for macOS `helium-ledger-cli-x.x.x-x86_64-apple-darwin.zip` and unzip the
-  file
-- Navigate to where you downloaded the release on your computer in terminal
-- Make sure your ledger is connected to your computer, then type `./helium-ledger-cli`
+- Download the release for macOS `helium-ledger-cli-v2.2.3-x86-64-macos.tar.gz` and unzip the file
+- Navigate to where you downloaded the release on your computer in Terminal
+- Make sure your Ledger is connected to your computer, then type `./helium-ledger-cli`
 
 ```bash
-~/helium-ledger-cli-v2.0.0-x86-64-macos$ ./helium-ledger-cli
+~/helium-ledger-cli-v2.2.3-x86-64-macos$ ./helium-ledger-cli
 Communicating with Ledger - follow prompts on screen
-helium-ledger-cli 2.0.0
+helium-ledger 2.2.3
 Interact with Ledger Nano S for hardware wallet management
 
 USAGE:
@@ -86,10 +88,12 @@ OPTIONS:
                                  TCP connection here (typically 9999 or 40000)
 
 SUBCOMMANDS:
-    balance      Get wallet information
-    help         Prints this message or the help of the given subcommand(s)
-    pay          Pay a given address
-    validator    Stake a validator
+    balance       Get wallet information
+    burn          Burn to given address
+    help          Prints this message or the help of the given subcommand(s)
+    pay           Pay a given address
+    securities    Transfer Security Tokens
+    validators    Stake a validator
 ```
 
 ## Check Balance and Receive HNT
@@ -97,10 +101,11 @@ SUBCOMMANDS:
 Type `./helium-ledger-cli balance` to see your new Ledger address and balance.
 
 ```bash
-~/helium-ledger-cli-v2.0.0-x86-64-macos$ ./helium-ledger-cli balance
+~/helium-ledger-cli-v2.2.3-x86-64-macos$ ./helium-ledger-cli balance
 Communicating with Ledger - follow prompts on screen
-Ledger running Helium App v2.1.0
+Ledger running Helium App v2.2.4
 
+helium-ledger/2.2.3
 +-----------------------------------------------------+-------------+--------------+-----------------+
 | Address                                             | Balance HNT | Data Credits | Security Tokens |
 +-----------------------------------------------------+-------------+--------------+-----------------+
@@ -126,16 +131,18 @@ QR code.
 
 ## Multiple Wallet Support
 
-Your Ledger hardware wallet can actually support many accounts per supported coin and this is no
-different for HNT. To interact with a wallet other than the default 0th account, you place a
-`--account N` flag before the command. So the balance command becomes:
-`helium-ledger-cli --account 1 balance`
+Your Ledger hardware wallet can support many accounts per supported coin and this is no different
+for HNT. To interact with a wallet other than the default 0th account, you place a `--account N`
+flag before the command. So the balance command becomes:
+
+> `helium-ledger-cli --account 1 balance`
 
 ```bash
 ~/helium-ledger-cli-v2.0.0-x86-64-macos$ ./helium-ledger-cli --account 1 balance
 Communicating with Ledger - follow prompts on screen
-Ledger running Helium App v2.1.0
+Ledger running Helium App v2.2.4
 
+helium-ledger/2.2.3
 +-----------------------------------------------------+-------------+--------------+-----------------+
 | Address                                             | Balance HNT | Data Credits | Security Tokens |
 +-----------------------------------------------------+-------------+--------------+-----------------+
@@ -145,13 +152,16 @@ Ledger running Helium App v2.1.0
 
 This `--account N` prefix applies to all commands. The balance command has a special flag, `--scan`
 that you can place _after_ the command. This allows you to scan all the wallets from 0 to N. For
-example: `helium-ledger-cli --account 8 balance --scan`
+example:
+
+> `helium-ledger-cli --account 8 balance --scan`
 
 ```bash
 ~/helium-ledger-cli-v2.0.0-x86-64-macos$ ./helium-ledger-cli --account 8 balance --scan
 Communicating with Ledger - follow prompts on screen
-Ledger running Helium App v2.1.0
+Ledger running Helium App v2.2.4
 
+helium-ledger/2.2.3
 +-------+-----------------------------------------------------+-------------+--------------+-----------------+
 | Index | Address                                             | Balance HNT | Data Credits | Security Tokens |
 +-------+-----------------------------------------------------+-------------+--------------+-----------------+
@@ -171,7 +181,7 @@ Ledger running Helium App v2.1.0
 Up to 255 wallets may be used on the Ledger, but the `--scan` command fetches each address
 one-by-one; it will take quite a long time to get all 255 addresses.
 
-While this convenience feature exists, **double check the address using the screen of the Ledger**
+While this convenience feature exists, **double-check the address using the screen of the Ledger**
 (ie: call the specific `--account N balance` without the `--scan` option) before sending any assets.
 A nefarious CLI application could provide fake addresses.
 
@@ -179,23 +189,25 @@ A nefarious CLI application could provide fake addresses.
 
 ## Supported Transactions
 
-We will document an example `pay` transactions here, but the documents may lag changes in the app.
-It's good to get familiar with the built-in documentation of the CLI. At the top-level, you can do
+We will document an example `pay` transaction here, but the documents may lag changes in the app.
+It's good to get familiar with the built-in documentation of the CLI. At the top level, you can do
 `./helium-ledger-cli --help` to get an understanding of what transactions might be available.
 
-At time of writing, you'll see the following "subcommands" are available:
+At the time of writing, you'll see the following "subcommands" are available:
 
 - **balance**: get wallet information
 - **pay**: pay a given address
 - **validator**: stake a validator
 
 To understand how to use a particular command, simply call the command with the addition of the
-`--help` flag. For example: `./helium-ledger-cli --help`
+`--help` flag. For example:
+
+> `./helium-ledger-cli --help`
 
 ```bash
 ~/helium-ledger-cli-v2.0.0-x86-64-macos$ ./helium-ledger-cli pay --help
 Communicating with Ledger - follow prompts on screen
-helium-ledger-cli-pay 2.0.0
+helium-ledger-cli-pay 2.2.3
 Pay a given address
 
 USAGE:
@@ -207,6 +219,7 @@ FLAGS:
 
 OPTIONS:
         --fee <fee>        Manually set the DC fee to pay for the transaction
+        --memo <memo>      Memo field to include. Provide as a base64 encoded string [default: AAAAAAAAAAA=]
         --nonce <nonce>    Manually set the nonce for the transaction
 
 ARGS:
@@ -218,7 +231,7 @@ The `USAGE` example shows you what the command should look like and the `ARGS` a
 bottom. Always refer to the built-in help menu over these docs.
 
 Even if you rely on the `--help` menu from here on out, the `pay` command in this guide will be good
-practice for using the Ledger and making sure you understand the security model.
+practice using the Ledger and make sure you understand the security model.
 
 ## Sending HNT
 
@@ -229,7 +242,7 @@ practice for using the Ledger and making sure you understand the security model.
 ```bash
 $ ./helium-ledger-cli pay PAYEE_ACCOUNT 0.1
 Communicating with Ledger - follow prompts on screen
-Ledger running Helium App v2.1.0
+Ledger running Helium App v2.2.3
 
 Creating the following transaction:
 +-----------------------------------------------------+----------------+-------+--------+
@@ -240,12 +253,11 @@ Creating the following transaction:
 WARNING: do not use this output as the source of truth. Instead, rely on the Ledger Display
 ```
 
-:::warning
+:::warning Use the screen of the Ledger to confirm everything you do.
 
-Use the screen of the Ledger to confirm everything you do. The CLI app could be nefarious (maybe you
-downloaded the wrong one, maybe somebody change the program on your computer, etc). The Ledger on
-the other hand will only load applications signed by Ledger, so your security relies on you
-verifying the transaction details on the screen.
+The CLI app could be nefarious (maybe you downloaded the wrong one, maybe somebody change the
+program on your computer, etc). The Ledger on the other hand will only load applications signed by
+Ledger, so your security relies on you verifying the transaction details on the screen.
 
 To be clear, do not compare the output to the output from the CLI shown above (the nefarious app
 might be showing you the fake address), but instead from your original source.
@@ -282,17 +294,76 @@ Use the link displayed to check on your transaction status.
 
 <img src={useBaseUrl('img/wallets/ledger/macos-zip-warning2.png')} />
 
-### Running commands in terminal does not work. MacOS users may need to update their security permissions.
+### macOS "Developer cannot be verified" Error when running commands in Terminal
 
 1. Go to System Preferences &gt; Security & Privacy
-2. Allow App downloaded from App Store and Identified Developers
+2. Allow App downloaded from `App Store and Identified Developers`
 3. You may need to click the lock icon and give the CLI permissions
 4. Run the command in CLI again
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
+  <div class="row">
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <b>Step 1. Dismiss "Developer cannot be verified" error</b>
+      <p>
+        Due to macOS security features, the first time you attempt to run the CLI you are likely to
+        encounter this error:
+      </p>
+    </div>
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <img
+        className="homeicon"
+        src={useBaseUrl('img/wallets/cli-wallet/macOS-security-warning.png')}
+      />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <img
+        className="homeicon"
+        src={useBaseUrl('img/wallets/cli-wallet/macOS-security-allow.png')}
+      />
+    </div>
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <b>
+        Step 2. Open <code>System Preferences</code> &gt; <code>Security & Privacy</code>{' '}
+      </b>
+      <p>
+        Ensure that Allow App downloaded from <code>App Store and Identified Developers</code> is
+        selected.
+      </p>
+      <p>
+        An <code>Allow Anyway</code> dialog should appear where indicated in the sample image. As a
+        reminder, macOS is picky, and may not display this option right away, with the System
+        Preferences window open, try to run the CLI from in Terminal again until this option is
+        presented to you.
+      </p>
+      <p>
+        When it is, click <b>Allow Anyway</b> to continue.
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <b>Step 3. Run the CLI in Terminal again.</b>
+      <p>
+        Run the CLI in Terminal again and you should now see a new pop up dialogue, click{' '}
+        <b>Open</b> to continue using the CLI.
+      </p>
+    </div>
+    <div class="col col--6" style={{ marginBottom: 0 }}>
+      <img
+        className="homeicon"
+        src={useBaseUrl('img/wallets/cli-wallet/macOS-security-open.png')}
+      />
+    </div>
+  </div>
+</div>
 
 ### Failed opening hid device
 
 If you see this error `error: hid error: Failed opening hid device`, close Ledger Live software and
-run a command again in the CLI.
+run the command again in the CLI.
 
 ### Unable to access memory outside buffer bounds
 
@@ -305,7 +376,7 @@ If on Ledger Live you see this error, unplug the ledger from your computer and p
 The attack surface for using the Helium wallet app on a Ledger comprises the Helium app itself, the
 system firmware running on the Ledger Hardware Wallet, the computer that the Ledger Hardware Wallet
 is connected to, and possession/control of the device. For our purposes, the app only needs to
-ensure its own correctness and protect the user from the computer that the Ledger Hardware Wallet is
+ensure its correctness and protect the user from the computer that the Ledger Hardware Wallet is
 connected to. Other attack surfaces are beyond our control; we assume that the user physically
 controls the device, is not running malicious/buggy software on the device, and follows proper
 security protocols. The goal of the Helium app is to achieve security given these assumptions.
@@ -316,8 +387,8 @@ the difference, but secretly act maliciously. Specifically, the computer can do 
 
 1. Lie to the user about which actions it is performing.
 
-Example: the user runs `./helium-ledger-cli balance` to display their public key to so that they may
-receive payment; yet a hard-coded address is displayed
+Example: the user runs `./helium-ledger-cli balance` to display their public key so that they may
+receive payment, yet a hard-coded address is displayed
 
 2. Lie to the user about who the recipient is.
 
