Apply suggestions from code review
Co-authored-by: Coco Tang <coco@helium.com>

--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -18,7 +18,7 @@ and recievers ("Witness") of PoC activity, you can read more here:
 [Proof of Coverage](./blockchain/proof-of-coverage)
 
 While all current 5G Hotspot models _also_ participate in the LoRaWAN network and PoC, the CBRS
-Small Cell and 5G aspects of a 5G Helium Hotspot require a new approach to validating PoC.
+Small Cell and 5G aspects of a 5G Hotspot require a new approach to validating PoC.
 
 :::info One Way Traffic
 
@@ -66,7 +66,7 @@ Soon, 5G Hotspots will perform periodic speed tests which will be considered in 
 
 :::
 
-A minimum Download and Upload speed will be required by each 5g Hotspot to ensure the 5G Hotspot is
+A minimum Download and Upload speed will be required by each 5G Hotspot to ensure the 5G Hotspot is
 providing quality coverage.
 
 - 5G Hotspot must heartbeat 1 per Reward Period.
