--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -29,12 +29,17 @@ and thus can not "hear" one another directly.
 
 ## 5G PoC Roadmap
 
-- **Stage 1:** Rewards Submissions Are Triggered By Time Period **(current)**
-- **Stage 2:** Rewards Submissions Are Triggered By Consensus Election
-- **Stage 3:** Addition Of Speed Test Data Into Reward Calculation
-- **Stage 4:** Increase Reward Frequency
-- **Stage 5:** Decouple Reward Period From Reward Submission Time
-
+- **Stage 1: **
+  [Rewards Submissions Are Triggered By Time Period](/5g-on-helium/5g-poc#milestone-1-rewards-submissions-are-triggered-by-time-period)
+  ** (current)**
+- **Stage 2: **
+  [Rewards Submissions Are Triggered By Consensus Election](/5g-on-helium/5g-poc#milestone-2-rewards-submissions-are-triggered-by-consensus-election)
+- **Stage 3: **
+  [Addition Of Speed Test Data Into Reward Calculation](/5g-on-helium/5g-poc#milestone-3-addition-of-speed-test-data-into-reward-calculation)
+- **Stage 4: **
+  [Increase Reward Frequency](/5g-on-helium/5g-poc#milestone-4-increase-the-frequency-of-rewarding)
+- **Stage 5: **
+  [Decouple Reward Period From Reward Submission Time](/5g-on-helium/5g-poc#milestone-5-decouple-reward-period-from-reward-submission-time)
 
 ---
 
