Mobile Mappers and Future Work

--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -165,3 +165,27 @@ Network switches that are advertised as "100/10" switches are often "90/9" in re
 > - Decouple Reward Period From Reward Submission Time.
 > - Increase tolerance for delay of heartbeat and speed test data by allowing rewards to be sent for
 >   the receipts that came in late.
+
+---
+
+## Stage 2: 5G Mapper Proof of Coverage
+
+Mobile Mappers are hardware devices designed specifically to attach to CBRS Small Cell Radios to
+assist in verifying the quality of coverage and their location in a particular hex.
+
+In accordance with [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) Mobile
+Mappers will earn 10% of Mobile rewards for verifying the Network.
+
+The transition from “heartbeat” rewards, as in
+[Genesis](/5g-on-helium/5g-poc#stage-1-genesis-rewards), to Mapping rewards will not happen
+immediately. A transitional period will allow 5G Hotspot Owners with active CBRS Small Cell Radios
+to receive both “heartbeat” rewards and rewards for being mapped.
+
+The details on how exactly data from Mobile Mappers will be used in rewards calculations is
+currently in development.
+
+---
+
+## Stage 3: Additional Methods of Proof of Coverage
+
+Additional methods of 5G Proof of Coverage will emerge. Stay tuned!
