--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -34,13 +34,9 @@ and thus can not "hear" one another directly.
     [Time Period Triggered Rewards](/5g-on-helium/5g-poc#genesis-phase-1-time-period-triggered-rewards)
     ** (current)**
   - Genesis Phase 2:
-    [Consensus Election Triggered Rewards](/5g-on-helium/5g-poc#genesis-phase-2-consensus-election-triggered-rewards)
+    [Time Period Triggered Rewards with Minimum Delay](/5g-on-helium/5g-poc#genesis-phase-1-time-period-triggered-rewards-with-minimum-delay)
   - Genesis Phase 3:
     [Speed Test and Quality of Service](/5g-on-helium/5g-poc#genesis-phase-3-speed-test-and-quality-of-service)
-  - Genesis Phase 4:
-    [Reward Frequency Increase](/5g-on-helium/5g-poc#genesis-phase-4-reward-frequency-increase)
-  - Genesis Phase 5:
-    [Reward Period Decoupling From Reward Submission Time](/5g-on-helium/5g-poc#genesis-phase-5-reward-period-decoupling)
 - **Stage 2: ** 5G Mappers Proof of Coverage
 - **Stage 3: ** Additional Methods of Proof of Coverage
 
@@ -58,6 +54,8 @@ To qualify for the Genesis Rewards in a Reward Period, a CBRS Small Cell Radio m
 - Be properly installed.
   - Be registered with the SAS (Outdoor Radios Only).
 - Broadcast at least 1 "heartbeat" per Reward Period.
+
+As an improvement to this approch, 
 
 :::note What is a "Heartbeat"?
 
@@ -100,10 +98,10 @@ must:
   - Be registered with the SAS (Outdoor Radios Only).
 - Broadcast at least 1 "heartbeat" per Reward Period.
 
-### Genesis Phase 2: Consensus Election Triggered Rewards
+### Genesis Phase 2: Time Period Triggered Rewards with Minimum Delay
 
 > - Reward Period is 48 Consensus Elections (1440 blocks, approximately 24 hours).
-> - Reward submission occurs approx 30 minutes after the Reward Period ends.
+> - Reward submission occurs approx 15 minutes after the Reward Period ends, around 00:00 UTC.
 
 At this Milestone, to qualify for the Genesis Rewards in a Reward Period, a CBRS Small Cell Radio
 must:
@@ -158,17 +156,6 @@ the 100Mbps requirement, and is possibly a result of the use of non-gigabit netw
 Network switches that are advertised as "100/10" switches are often "90/9" in real-world use.
 
 :::
-
-### Genesis Phase 4: Reward Frequency Increase
-
-> - Reward Periods shortened to 2 Epochs (60 blocks, or approximately 1 hour).
-> - Rewards transactions are triggered with every other Consensus Election.
-
-### Genesis Phase 5: Reward Period Decoupling
-
-> - Decouple Reward Period From Reward Submission Time.
-> - Increase tolerance for delay of heartbeat and speed test data by allowing rewards to be sent for
->   the receipts that came in late.
 
 ---
 
