Updates Genesis Phase 2

--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -100,7 +100,7 @@ must:
 
 ### Genesis Phase 2: Time Period Triggered Rewards with Minimum Delay
 
-> - Reward Period is 48 Consensus Elections (1440 blocks, approximately 24 hours).
+> - Reward Period is approximately 1440 blocks and closely aligns with 00:00 UTC to 23:59 UTC.
 > - Reward submission occurs approx 15 minutes after the Reward Period ends, around 00:00 UTC.
 
 At this Milestone, to qualify for the Genesis Rewards in a Reward Period, a CBRS Small Cell Radio
