--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -37,6 +37,10 @@ and thus can not "hear" one another directly.
     [Time Period Triggered Rewards with Minimum Delay](/5g-on-helium/5g-poc#genesis-phase-1-time-period-triggered-rewards-with-minimum-delay)
   - Genesis Phase 3:
     [Speed Test and Quality of Service](/5g-on-helium/5g-poc#genesis-phase-3-speed-test-and-quality-of-service)
+  - Genesis Phase 4:
+    [Reward Frequency Increase](/5g-on-helium/5g-poc#genesis-phase-4-reward-frequency-increase)
+  - Genesis Phase 5:
+    [Reward Period Decoupling From Reward Submission Time](/5g-on-helium/5g-poc#genesis-phase-5-reward-period-decoupling)
 - **Stage 2: ** 5G Mappers Proof of Coverage
 - **Stage 3: ** Additional Methods of Proof of Coverage
 
@@ -156,6 +160,17 @@ the 100Mbps requirement, and is possibly a result of the use of non-gigabit netw
 Network switches that are advertised as "100/10" switches are often "90/9" in real-world use.
 
 :::
+
+### Genesis Phase 4: Reward Frequency Increase
+
+> - Reward Periods shortened to 2 Epochs (60 blocks, or approximately 1 hour).
+> - Rewards transactions are triggered with every other Consensus Election.
+
+### Genesis Phase 5: Reward Period Decoupling
+
+> - Decouple Reward Period From Reward Submission Time.
+> - Increase tolerance for delay of heartbeat and speed test data by allowing rewards to be sent for
+>   the receipts that came in late.
 
 ---
 
