Updates 5G PoC Roadmap (#993)

--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -34,7 +34,7 @@ and thus can not "hear" one another directly.
     [Time Period Triggered Rewards](/5g-on-helium/5g-poc#genesis-phase-1-time-period-triggered-rewards)
     ** (current)**
   - Genesis Phase 2:
-    [Consensus Election Triggered Rewards](/5g-on-helium/5g-poc#genesis-phase-2-consensus-election-triggered-rewards)
+    [Time Period Triggered Rewards with Minimum Delay](/5g-on-helium/5g-poc#genesis-phase-2-time-period-triggered-rewards-with-minimum-delay)
   - Genesis Phase 3:
     [Speed Test and Quality of Service](/5g-on-helium/5g-poc#genesis-phase-3-speed-test-and-quality-of-service)
   - Genesis Phase 4:
@@ -100,10 +100,10 @@ must:
   - Be registered with the SAS (Outdoor Radios Only).
 - Broadcast at least 1 "heartbeat" per Reward Period.
 
-### Genesis Phase 2: Consensus Election Triggered Rewards
+### Genesis Phase 2: Time Period Triggered Rewards with Minimum Delay
 
-> - Reward Period is 48 Consensus Elections (1440 blocks, approximately 24 hours).
-> - Reward submission occurs approx 30 minutes after the Reward Period ends.
+> - Reward Period is approximately 1440 blocks and closely aligns with 00:00 UTC to 23:59 UTC.
+> - Reward submission occurs approx 15 minutes after the Reward Period ends, around 00:00 UTC.
 
 At this Milestone, to qualify for the Genesis Rewards in a Reward Period, a CBRS Small Cell Radio
 must:
