update docs to current stage

--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -32,9 +32,9 @@ and thus can not "hear" one another directly.
 - **Stage 1: ** Genesis Rewards
   - Genesis Phase 1:
     [Time Period Triggered Rewards](/5g-on-helium/5g-poc#genesis-phase-1-time-period-triggered-rewards)
-    ** (current)**
   - Genesis Phase 2:
     [Time Period Triggered Rewards with Minimum Delay](/5g-on-helium/5g-poc#genesis-phase-2-time-period-triggered-rewards-with-minimum-delay)
+    **(current)**
   - Genesis Phase 3:
     [Speed Test and Quality of Service](/5g-on-helium/5g-poc#genesis-phase-3-speed-test-and-quality-of-service)
   - Genesis Phase 4:
@@ -101,6 +101,12 @@ must:
 - Broadcast at least 1 "heartbeat" per Reward Period.
 
 ### Genesis Phase 2: Time Period Triggered Rewards with Minimum Delay
+
+:::info
+
+This is the Current Phase as of August 29, 2022
+
+:::
 
 > - Reward Period is approximately 1440 blocks and closely aligns with 00:00 UTC to 23:59 UTC.
 > - Reward submission occurs approx 15 minutes after the Reward Period ends, around 00:00 UTC.
