--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -38,9 +38,7 @@ and thus can not "hear" one another directly.
   - Genesis Phase 3:
     [Speed Test and Quality of Service](/5g-on-helium/5g-poc#genesis-phase-3-speed-tests-and-quality-of-service)
   - Genesis Phase 4:
-    [Reward Frequency Increase](/5g-on-helium/5g-poc#genesis-phase-4-reward-frequency-increase)
-  - Genesis Phase 5:
-    [Reward Period Decoupling From Reward Submission Time](/5g-on-helium/5g-poc#genesis-phase-5-reward-period-decoupling)
+    [Heartbeats and Consistency of Service](/5g-on-helium/5g-poc#genesis-phase-4-heartbeats-and-reliability-of-service)
 - **Stage 2: ** 5G Mappers Proof of Coverage
 - **Stage 3: ** Additional Methods of Proof of Coverage
 
@@ -127,14 +125,14 @@ must:
 > - A minimum Download speed, Upload speed, and Latency will be required by each 5G Hotspot to
 >   ensure it is providing quality coverage.
 
-A 5G Hotspot will perform a speed test every 12 hours with the results being averaged over the
-previous `6` tests. This moving average is "reset" following a speed test gap of `>12 hours` and a
-minumum of `2` speed test results are required to be eligible for Genesis Rewards.
-
 To meet the speed test requirements as outlined in
 [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#oracle-operations), a 5G Hotspot
 must have a rolling average Download speed of at least 100Mbps **AND** a rolling average Upload
 speed of at least 10Mbps **AND** a rolling average Latency of 50ms or less.
+
+A 5G Hotspot will perform a speed test approximately every 12 hours with the results being averaged
+over the previous `6` tests. This moving average is reset following a speed test gap of `>12 hours`
+and a minimum of `2` speed test results are required to be eligible for Genesis Rewards.
 
 **A 5G Hotspot that does not meet all three of these requirements will be excluded from rewards
 calculations in the given Reward Period.**
@@ -168,16 +166,28 @@ Network switches that are advertised as "100/10" switches are often "90/9" in re
 
 :::
 
-### Genesis Phase 4: Reward Frequency Increase
+### Genesis Phase 4: Heartbeats and Reliability of Service
 
-> - Reward Periods shortened to 2 Epochs (60 blocks, or approximately 1 hour).
-> - Rewards transactions are triggered with every other Consensus Election.
+> - Reward Period is approximately 1440 blocks and closely aligns with 00:00 UTC to 23:59 UTC.
+> - Reward submission occurs approx 15 minutes after the Reward Period ends, around 00:00 UTC.
+> - 5G Hotspots perform periodic speed tests which will be considered in reward calculations.
+> - 5G Hotspots must generate 1 "heartbeat" in a 1 hour period for at least 12 periods to ensure it
+>   is providing reliable coverage uptime.
 
-### Genesis Phase 5: Reward Period Decoupling
+In addition to speed test requirements, a 5G Hotspot is required to generate at least 1 "heartbeat"
+per hour in each of at least 12 unique hours in the Reward Period.
 
-> - Decouple Reward Period From Reward Submission Time.
-> - Increase tolerance for delay of heartbeat and speed test data by allowing rewards to be sent for
->   the receipts that came in late.
+At this Milestone, to qualify for the Genesis Rewards in a Reward Period, a CBRS Small Cell Radio
+must:
+
+- Be connected to a 5G Hotspot.
+- Be properly installed.
+  - Be registered with the SAS (Outdoor Radios Only).
+- Broadcast at least 1 "heartbeat" per Reward Period.
+- Maintain 100 Mbps or greater Download speeds on a 6-interval moving average.
+- Maintain 10 Mbps or greater Upload speeds on a 6-interval moving average.
+- Maintain 50ms or lesser Latency on a 6-interval moving average.
+- Generate at least 1 "heartbeat" in at least 12 unique hours of the Reward Period.
 
 ---
 
