--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -131,7 +131,7 @@ must have a rolling average Download speed of at least 100Mbps **AND** a rolling
 speed of at least 10Mbps **AND** a rolling average Latency of 50ms or less.
 
 A 5G Hotspot will perform a speed test approximately every 12 hours with the results being averaged
-by the Rewards Server over the previous `6` tests. This moving average is reset following a speed
+by the 5G PoC Oracle over the previous `6` tests. This moving average is reset following a speed
 test gap of `>12 hours` and a minimum of `2` speed test results are required to be eligible for
 Genesis Rewards.
 
