--- a/docs/5g-on-helium/5g-poc.mdx
+++ b/docs/5g-on-helium/5g-poc.mdx
@@ -121,18 +121,18 @@ must:
 
 > - Reward Period is approximately 24 hours, with Reward submission occurring at approximately 01:30
 >   UTC.
-> - 5G Hotspots perform periodic speed tests which will be considered in reward calculations.
+> - 5G Hotspots perform periodic Speed Tests which will be considered in reward calculations.
 > - A minimum Download speed, Upload speed, and Latency will be required by each 5G Hotspot to
 >   ensure it is providing quality coverage.
 
-To meet the speed test requirements as outlined in
+To meet the Speed Test requirements as outlined in
 [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#oracle-operations), a 5G Hotspot
 must have a rolling average Download speed of at least 100Mbps **AND** a rolling average Upload
 speed of at least 10Mbps **AND** a rolling average Latency of 50ms or less.
 
-A 5G Hotspot will perform a speed test approximately every 12 hours with the results being averaged
-by the 5G PoC Oracle over the previous `6` tests. This moving average is reset following a speed
-test gap of `>12 hours` and a minimum of `2` speed test results are required to be eligible for
+A 5G Hotspot will perform a Speed Test approximately every 12 hours with the results being averaged
+by the MOBILE PoC Oracle over the previous `6` tests. This moving average is reset following a speed
+test gap of `>12 hours` and a minimum of `2` Speed Test results are required to be eligible for
 Genesis Rewards.
 
 :::note Moving Average
@@ -147,42 +147,67 @@ test results for each download, upload, and latency.
 Here are a set of tables to help visualize all of these components that make up the Speed Test
 result.
 
-**Successful Speed Test Series:**
+:::info
 
-Here all Speed Test Metrics are passing, the 5G Hotspot is providing a high quality connection.
+Note that it may take up to 12 hours for newly connected 5G Hotspots to perform a Speed Test and a
+minimum of 2 Speed Tests are required for the MOBILE PoC Oracle to calculate a moving average.
+
+:::
+
+**Successful Speed Test:**
+
+This 5G Hotspot is passing all Speed Test metrics and is providing a high-quality connection.
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-success.png')} />
 
+> This 5G Hotspot _will_ be eligible for rewards during all Reward Periods after Test 2.
+
+---
+
 **Missing A Single Speed Test:**
 
-This 5G Hotspot has not reported Speed Test data, this will be common for a newly connected 5G
-Hotspot. This 5G Hotspot _will_ be rewarded for all Reward Periods.
+This 5G Hotspot has not reported Speed Test data at Test 5.
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-one-miss.png')} />
 
+> This 5G Hotspot _will not_ be eligible for rewards while Test 5 and Test 6 are the most recent.
+
+---
+
 **Missing Multiple Speed Tests:**
 
-This 5G Hotspot has not reported a series of Speed Test data, this is often a result of a 5g Hotspot
-being disconnected from the internet for a long time. This 5G Hotspot _will not_ earn rewards during
-while Test 5 and 6 are the most recent.
+This 5G Hotspot has not reported Speed Test data during Test 5, 6, or 7. This is often a result of a
+5G Hotspot being disconnected from the Internet for a long time.
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-many-miss.png')} />
 
+> This 5G Hotspot _will not_ be eligible for rewards during the Reward Periods for which the results
+> of Test 5, 6, 7, or 8 are the most recent.
+
+---
+
 **Failing A Speed Test:**
 
-This 5G Hotspot has "failed" its Speed Test on all metrics (orange cells), but the Moving Average
-(light green cells) stays within the passing range. This 5G Hotspot _will_ be rewarded for all
-Reward Periods.
+This 5G Hotspot has failed its Speed Test on all metrics in Test 6, but the Moving Average stays
+within the passing range.
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-one-fail.png')} />
 
+> This 5G Hotspot _will_ be eligible for rewards during all Reward Periods after Test 2.
+
+---
+
 **Failing Multiple Speed Tests:**
 
-This 5G Hotspot has failed many Speed Tests in a row (orange cells), this has caused the Moving
-Average to fail (light green cells). This 5G Hotspot _will not_ earn rewards during while Test 6, 7,
-and 8 are the most recent.
+This 5G Hotspot has failed Speed Tests in Test 3, 4, 5, and 6. This has caused the Moving Average to
+fail for Test 6, 7, and 8.
 
 <img className="docsheader" src={useBaseUrl('img/5g-on-helium/speed-test-many-fail.png')} />
+
+> This 5G Hotspot _will not_ be eligible for rewards during the Reward Periods for which the results
+> of Test 6, 7, or 8 are the most recent.
+
+---
 
 #### Helium Explorer 5G Hotspot Statistics Tab
 
@@ -202,7 +227,7 @@ Current Speed Test Statistics for a given 5G Hotspot can be viewed on the Helium
       />
     </div>
     <div class="col col--6" style={{ marginBottom: 0 }}>
-      <b>🟣 Not Enough Data</b>
+      <b>🔴 Not Enough Data</b>
       <p>
         Here the 5G Hotspot has not reported Speed Test data, this will be common for a newly
         connected 5G Hotspot.
@@ -242,9 +267,6 @@ Current Speed Test Statistics for a given 5G Hotspot can be viewed on the Helium
   <hr></hr>
 </div>
 
-**A 5G Hotspot that does not meet all three of these requirements will be excluded from rewards
-calculations in the given Reward Period.**
-
 At this Milestone, to qualify for the Genesis Rewards in a Reward Period, a CBRS Small Cell Radio
 must:
 
@@ -267,7 +289,7 @@ that 5G Hotspots are providing high-quality coverage.**
 
 :::caution
 
-In a review of existing speed test data, many Download speed test results are capped _just_ below
+In a review of existing Speed Test data, many Download Speed Test results are capped _just_ below
 the 100Mbps requirement, and is possibly a result of the use of non-gigabit networking equipment.
 
 Network switches that are advertised as "100/10" switches are often "90/9" in real-world use.
@@ -278,7 +300,7 @@ Network switches that are advertised as "100/10" switches are often "90/9" in re
 
 > - Reward Period is approximately 24 hours, with Reward submission occurring at approximately 01:30
 >   UTC.
-> - 5G Hotspots perform periodic speed tests which will be considered in reward calculations.
+> - 5G Hotspots perform periodic Speed Tests which will be considered in reward calculations.
 > - Small Cell Radios must generate at least 1 "heartbeat" per 1 hour for any 12 hours in the
 >   24-hour Reward Period.
 
